# project_qt

./: README.md
Project_QT/: CMakeLists.txt  resources.qrc
Project_QT/data/: menubar.xml  whatsnew.txt
Project_QT/src/: aboutdialog.cpp  aboutdialog.h  additemcommand.cpp  additemcommand.h  binaryfile.cpp  binaryfile.h  bordersystem.cpp  bordersystem.h  bordersystemdialog.cpp  bordersystemdialog.h  brush.cpp  brush.h  brushmanager.cpp  brushmanager.h  clearitemscommand.cpp  clearitemscommand.h  clientversion.cpp  clientversion.h  creature.cpp  creature.h  creaturemanager.cpp  creaturemanager.h  creaturepropertyeditor.cpp  creaturepropertyeditor.h  deleteselectioncommand.cpp  deleteselectioncommand.h  eraserbrush.cpp  eraserbrush.h  floodfillbrush.cpp  floodfillbrush.h  gotopositiondialog.cpp  gotopositiondialog.h  helpsystem.cpp  helpsystem.h  item.cpp  item.h  itemmanager.cpp  itemmanager.h  itempropertyeditor.cpp  itempropertyeditor.h  (+64 more)
Project_QT/src/ui/: aboutdialog.cpp  aboutdialog.h  editorpreferencestab.cpp  editorpreferencestab.h  generalpreferencestab.cpp  generalpreferencestab.h
Project_QT/tasks/: Tasks_List.md  master_prompt.txt  migration_tasks_config.xml
Project_QT/tasks/tasks_definitions/: Task1.md  Task10.md  Task100.md  Task11.md  Task12.md  Task13.md  Task14.md  Task15.md  Task16.md  Task17.md  Task18.md  Task19.md  Task2.md  Task20.md  Task21.md  Task22.md  Task23.md  Task24.md  Task25.md  Task26.md  Task27.md  Task28.md  Task29.md  Task3.md  Task30.md  Task31.md  Task32.md  Task33.md  Task34.md  Task35.md  Task36.md  Task37.md  Task38.md  Task39.md  Task4.md  Task40.md  Task41.md  Task42.md  Task43.md  Task44.md  (+60 more)
data/: creatures.xml
wxwidgets/: CMakeLists.txt  about_window.cpp  action.cpp  add_item_window.cpp  add_item_window.h  application.cpp  application.h  automagic_settings.cpp  automagic_settings.h  border_editor_window.cpp  border_editor_window.h  borderize_window.cpp  borderize_window.h  browse_tile_window.cpp  browse_tile_window.h  brush.cpp  brush.h  carpet_brush.cpp  color_utils.h  common.cpp  common.h  common_windows.cpp  common_windows.h  copybuffer.cpp  copybuffer.h  creature_sprite_manager.cpp  creature_sprite_manager.h  dark_mode_manager.cpp  dark_mode_manager.h  definitions.h  doodad_brush.cpp  editor.cpp  editor.h  editor_tabs.cpp  find_creature_window.cpp  find_creature_window.h  find_item_window.cpp  find_item_window.h  graphics.cpp  graphics.h  (+80 more)
